experimenting with formatting for the journal template

--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
         <div>
           <span id="name">{{ config.extra.name }}</span>
           {% if config.extra.display_id -%}
-          <span id="id">@{{ config.extra.id }}</span>
+          <span id="id"><a style="color: inherit;" target="_blank" href="https://github.com/{{ config.extra.id }}">@{{ config.extra.id }}</a></span>
           {% endif -%}
         </div>
         <div id="bio"> {{ config.extra.bio }} </div>
