--- a/templates/_header-journal.html
+++ b/templates/_header-journal.html
@@ -20,6 +20,8 @@
 
       {% set toc_icon = load_data(path="static/icon/toc.svg") %}
 
+      {% if page.extra.toc is defined %}{% set show_toc = page.extra.toc %}{% else %}{% set show_toc = config.extra.toc %}{% endif %}
+
       {% if show_toc and page %}
       <button id="toc-toggle" aria-label="table of content">
         {{ toc_icon | safe }}
