fuck me, i hate this

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -43,7 +43,7 @@
         <link rel="manifest" href="{{ "/site.webmanifest" | locale_url | htmlBaseUrl(settings.url) }}">
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="{{ settings.themeColorLight }}">
         <meta name="theme-color" media="(prefers-color-scheme: dark)" content="{{ settings.themeColorDark }}">
-        {% if settings.isStaging or noIndex %}<meta name="robots" content="noindex, nofollow"/>{% endif %}
+        {# {% if settings.isStaging or noIndex %}<meta name="robots" content="noindex, nofollow"/>{% endif %} #}
         {% if settings.author.fediverseProfile %}<link href="{{ settings.author.fediverseProfile }}" rel="me">{% endif %}
         <!-- set theme before page renders to stop fouc -->
         <script>
